# Todo-App

./: .gitignore  CLAUDE.md  README.md  VERIFICATION.md  pyproject.toml  test_advanced_features.py  test_functionality.py  test_todo_app.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
history/prompts/001-todo-app/: 2-create-todo-app-spec.spec.prompt.md  3-create-todo-app-plan.plan.prompt.md  4-create-todo-app-tasks.tasks.prompt.md  5-implement-todo-app.tasks.prompt.md
history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md  1-create-todo-app-constitution.constitution.prompt.md
history/prompts/todo-advanced-features/: 6-todo-advanced-features.spec.prompt.md  7-todo-advanced-features.plan.prompt.md  8-todo-advanced-features.tasks.prompt.md
history/prompts/todo-intermediate-features/: 2-todo-intermediate-features.spec.prompt.md  (+3 more)
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-intermediate-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-todo-advanced-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/cli/: cli_interface.py
src/models/: recurrence.py  task.py
src/services/: date_service.py  recurrence_service.py  search_service.py  sort_service.py  task_service.py
src/todo_app/: __init__.py  main.py
tests/integration/: test_cli_integration.py
tests/unit/: test_search_service.py  test_sort_service.py  test_task_service.py  test_validators.py
(+11 files in other folders)
